@@ -278,7 +278,6 @@ sub print_error_messages {
   compile_not_ok('TestCase::CompileError::Interface::HaveBlock', qr/interface.+block/i);
   compile_not_ok('TestCase::CompileError::Interface::NativeMethod', qr/interface.+native/i);
   compile_not_ok('TestCase::CompileError::Interface::StaticMethod', qr/interface.+instance/i);
-  compile_not_ok('TestCase::CompileError::Interface::ImplementStatement', qr/implement/i);
   compile_not_ok('TestCase::CompileError::Interface::ArrayElementCantAssign', qr/List to Stringable/i);
 }
 
