@@ -1,3 +1,0 @@
-class TestCase::CompileError::Interface::ImplementStatement : interface_t {
-  implement TestCase::Minimal;
-}
